# llama_index-alfred-agent

llama-alfred-agent/: README.md  app.py  aqi_forecast.py  pyproject.toml  retriever.py  tool_testing.py  tools.py  weather_forecast.py
llama-alfred-agent/data/: city_locations.csv
